# uwgb-comp-sci-371-group-project

./: .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  main.cpp
assets/: users.csv
assets/test_data/: Test_UserManager.csv  accounts.csv
docs/: README.md
lib/: Bank.h  BankAccount.h  CSVObject.h  Customer.h  Employee.h  ExampleClass.h  Manager.h  Transaction.h  User.h  UserManager.h
src/: Bank.cpp  BankAccount.cpp  CSVObject.cpp  Customer.cpp  Employee.cpp  ExampleClass.cpp  Manager.cpp  Transaction.cpp  User.cpp  UserManager.cpp
tests/: Test_CSVObject.cpp  Test_UserManager.cpp  UnitTests.cpp
